# tensorflow

tensorflow/contrib/lite/: CMakeLists.txt  download_dependencies.sh  interpreter.cc  model.cc  model_test.cc
tensorflow/contrib/lite/kernels/: add.cc  conv.cc  depthwise_conv.cc
tensorflow/contrib/lite/kernels/internal/optimized/: optimized_ops.h
tensorflow/contrib/lite/kernels/internal/reference/: depthwiseconv_uint8.h  reference_ops.h
tensorflow/lite/: CMakeLists.txt  README_CMAKE.md  download_dependencies.sh  model_test2.cc
tensorflow/lite/kernels/: add.cc  conv.cc  depthwise_conv.cc  fully_connected.cc
tensorflow/lite/kernels/internal/reference/: conv.h  depthwiseconv_uint8.h  fully_connected.h  reference_ops.h
